# make-ai-robot

./: .gitignore  README.md
src/astar_planner/include/astar_planner/: astar.hpp
src/astar_planner/src/: astar.cpp  path_planner_node.cpp  simulator_node.cpp
src/environment/: CMakeLists.txt
src/environment/worlds/: empty.world  hospital.world
src/go1_simulation/: CMakeLists.txt  guide.txt
src/go1_simulation/config/: ros_gz_bridge.yaml  slam_toolbox.yaml
src/go1_simulation/go1_simulation/: camera_recorder.py  go1_gt_pose_publisher.py  image_saver.py  publish_pointcloud.py  save_map.py
src/go1_simulation/launch/: go1.gazebo.launch.py  visualize_map.launch.py
src/go1_simulation/maps/: my_world.pgm  my_world.yaml
src/go1_simulation/rviz/: go1.rviz
src/go1_simulation/urdf/config/: sensor.urdf.xacro
src/go1_simulation/urdf/mech/: cylinder.urdf.xacro
src/go1_simulation/urdf/robots/: go1.urdf.xacro
src/go1_simulation/urdf/sensors/: depthCamera.urdf.xacro
src/go1_simulation/worlds/: empty.world  house_original.world
src/language_command_handler/: CMakeLists.txt
src/language_command_handler/config/: command_handler_config.yaml
src/language_command_handler/language_command_handler/: language_command_handler.py
src/language_command_handler/launch/: start_command_handler.launch.py
src/localization/: CMakeLists.txt  package.xml
src/localization/launch/: global_localizer.launch.py  odom_localizer.launch.py
src/localization/localization/: global_localizer_node.py  odom_localizer_node.py  utils.py
src/perception/launch/: perception.launch.py
src/perception/perception/: perception.py
yolo_training/: train.py
yolo_training/Food_Detector.v1-first_test.yolov11/: README.dataset.txt  README.roboflow.txt  data.yaml
